--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'Lighthaus';
-    src: url(/fonts/Lighthaus.woff2);
+    src: url(../fonts/Lighthaus.woff2);
 }
 
 @font-face {
     font-family: 'Mont';
-    src: url(/fonts/Mont-Thin.woff2);
+    src: url(../fonts/Mont-Thin.woff2);
     font-weight: 100;
     font-style: normal;
     font-display: swap;
@@ -13,7 +13,7 @@
 
 @font-face {
     font-family: 'Mont';
-    src: url(/fonts/Mont-ThinItalic.woff2);
+    src: url(../fonts/Mont-ThinItalic.woff2);
     font-weight: 100;
     font-style: italic;
     font-display: swap;
@@ -21,7 +21,7 @@
 
 @font-face {
     font-family: 'Mont';
-    src: url(/fonts/Mont-ExtraLight.woff2);
+    src: url(../fonts/Mont-ExtraLight.woff2);
     font-weight: 200;
     font-style: normal;
     font-display: swap;
@@ -29,7 +29,7 @@
 
 @font-face {
     font-family: 'Mont';
-    src: url(/fonts/Mont-ExtraLightItalic.woff2);
+    src: url(../fonts/Mont-ExtraLightItalic.woff2);
     font-weight: 200;
     font-style: italic;
     font-display: swap;
@@ -37,7 +37,7 @@
 
 @font-face {
     font-family: 'Mont';
-    src: url(/fonts/Mont-Light.woff2);
+    src: url(../fonts/Mont-Light.woff2);
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -45,7 +45,7 @@
 
 @font-face {
     font-family: 'Mont';
-    src: url(/fonts/Mont-LightItalic.woff2);
+    src: url(../fonts/Mont-LightItalic.woff2);
     font-weight: 300;
     font-style: italic;
     font-display: swap;
@@ -53,7 +53,7 @@
 
 @font-face {
     font-family: 'Mont';
-    src: url(/fonts/Mont-Regular.woff2);
+    src: url(../fonts/Mont-Regular.woff2);
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -61,7 +61,7 @@
 
 @font-face {
     font-family: 'Mont';
-    src: url(/fonts/Mont-RegularItalic.woff2);
+    src: url(../fonts/Mont-RegularItalic.woff2);
     font-weight: 400;
     font-style: italic;
     font-display: swap;
@@ -69,7 +69,7 @@
 
 @font-face {
     font-family: 'Mont';
-    src: url(/fonts/Mont-SemiBold.woff2);
+    src: url(../fonts/Mont-SemiBold.woff2);
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -77,7 +77,7 @@
 
 @font-face {
     font-family: 'Mont';
-    src: url(/fonts/Mont-SemiBoldItalic.woff2);
+    src: url(../fonts/Mont-SemiBoldItalic.woff2);
     font-weight: 600;
     font-style: italic;
     font-display: swap;
@@ -85,7 +85,7 @@
 
 @font-face {
     font-family: 'Mont';
-    src: url(/fonts/Mont-Bold.woff2);
+    src: url(../fonts/Mont-Bold.woff2);
     font-weight: 700;
     font-style: normal;
     font-display: swap;
@@ -93,7 +93,7 @@
 
 @font-face {
     font-family: 'Mont';
-    src: url(/fonts/Mont-BoldItalic.woff2);
+    src: url(../fonts/Mont-BoldItalic.woff2);
     font-weight: 700;
     font-style: italic;
     font-display: swap;
@@ -101,7 +101,7 @@
 
 @font-face {
     font-family: 'Mont';
-    src: url(/fonts/Mont-Heavy.woff2);
+    src: url(../fonts/Mont-Heavy.woff2);
     font-weight: 800;
     font-style: normal;
     font-display: swap;
@@ -109,7 +109,7 @@
 
 @font-face {
     font-family: 'Mont';
-    src: url(/fonts/Mont-HeavyItalic.woff2);
+    src: url(../fonts/Mont-HeavyItalic.woff2);
     font-weight: 800;
     font-style: italic;
     font-display: swap;
@@ -117,7 +117,7 @@
 
 @font-face {
     font-family: 'Mont';
-    src: url(/fonts/Mont-Black.woff2);
+    src: url(../fonts/Mont-Black.woff2);
     font-weight: 900;
     font-style: normal;
     font-display: swap;
@@ -125,7 +125,7 @@
 
 @font-face {
     font-family: 'Mont';
-    src: url(/fonts/Mont-BlackItalic.woff2);
+    src: url(../fonts/Mont-BlackItalic.woff2);
     font-weight: 900;
     font-style: italic;
     font-display: swap;
